--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -6,6 +6,7 @@
     z-index: 999;
     border:2px solid $black;
     font-size:20px;
+    font-weight: bold;
     @include xxxl-width{
             
       padding:15px 60px;
@@ -21,12 +22,18 @@
     @include lg-width{
       padding:15px 40px;
     }
+     @include md-width{
+      padding:15px 40px;
+            }
     @include transition(.2s ease);
     &:hover{
        color:$white;
        background: $black;
        color:$black;
        background: $white;
+       @include md-width{
+        background: rgba(0, 0, 0, 0);
+              }
       //  border:2px solid $black;
     }
 }
@@ -36,6 +43,7 @@
   z-index: 999;
   border:2px solid $black;
   font-size:20px;
+  font-weight: bold;
   @include xxxl-width{
             
     padding:15px 60px;
@@ -51,13 +59,20 @@
   @include lg-width{
     padding:15px 40px;
   }
+  @include md-width{
+    padding:15px 40px;
+    border:2px solid $white;
+          }
   @include transition(.2s ease);
     &:hover{
       color:$black;
       background: $white;
       color:$white;
       background: $black;
-       
+      @include md-width{
+        background: rgba(255, 255, 255, 0);
+        border:2px solid $white;
+              }
     }
 }
 
